--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./DruxUI/Just Logo - dark.png" />
+    <link rel="icon" href="https://druxui.s3.ap-south-1.amazonaws.com/just-logo-dark.png" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Next js light weight components" />
     <link rel="apple-touch-icon" href="/logo192.png" />
